--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,35 +1,36 @@
-<!DOCTYPE html>
-<html lang="en">
+<% layout("/layouts/boilerplate.ejs") %>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WanderList</title>
-</head>
+    <body>
 
-<body>
-
-    <h1>All Listings </h1>
-    <form method="get" action="/listings/new">
+        <h1>All Listings </h1>
+        <!-- <form method="get" action="/listings/new">
         <br>
         <br>
         <button>Add New </button>
-    </form>
-
-    <ul>
-
-        <% for (let listing of allListing){%>
-            <li> <a href="/listings/<%=listing._id%>">
-                    <%=listing.title%>
-                </a>
-
-                
-            </li>
-            <%}%>
+    </form> -->
 
 
-    </ul>
+    <div class="container mt-4">
+    <div class="row">
+        <% for (let listing of allListing) { %>
+            <div class="col-lg-3 col-md-4 col-sm-12 mb-4 d-flex justify-content-evenly">
+                <div class="card cardd mx-2  mb-4" style="width: 22rem; ">
+                    <img src="<%= listing.image.url %>" class="card-img-top" style="height: 15rem;" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title"><%= listing.title %></h5>
+                        <p class="card-text">&#8377; <%= listing.price.toLocaleString("en-IN") %>/night</p>
+                        <a href="/listings/<%= listing.id %>" class="btn btn-danger">More Details</a>
+                    </div>
+                </div>
+            </div>
+        <% } %>
+    </div>
+</div>
 
-</body>
+        
 
-</html>
+
+        
+
+
+    </body>
