--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,32 +1,54 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Listing detail</title>
-</head>
-<body>
-
-    <h1>Data in Detail</h1>
-    <ul>
-        <li><%= listingData.title %> </li>
-        <li><%= listingData.description %> </li>
-        <li>&#8377;<%= listingData.price.toLocaleString("en-IN") %> </li>
-        <li><%= listingData.location %> </li>
-        <li><%= listingData.country %> </li>
-
-       
+<% layout("/layouts/boilerplate.ejs") %>
 
 
+    <div class="row">
 
-    </ul>
+        <div class="col-lg-8 offset-lg-3">
 
-            <a href="/listings/<%=listingData.id%>/edit"> Edit this Listing </a>
+            <div class="card" style="width: 40rem;">
+                <img src="<%=listingData.image.url%>" class="card-img-top show-img" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">
+                        <%=listingData.title%>
+                    </h5>
+                    <p class="card-text"><b>Description</b>: <%=listingData.description%>
+                    </p>
+                    <p class="card-text"> <b>Price:</b>&#8377; <%= listingData.price.toLocaleString("en-IN") %>/night
+                    </p>
+                    </p>
+                    <p class="card-text"><b>Country :</b>: <%=listingData.country%>
+                    </p>
+                    <p class="card-text"><b>Location:</b>: <%=listingData.location%>
+                    </p>
 
-            <form method="post", action="/listings/<%=listingData.id%>?_method=DELETE">
 
-                <button> Delete this listing</button>
-            </form>
-    
-</body>
-</html>
+                    <div class="row">
+
+                        <div class="col-4 d-flex">
+                            <a href="/listings/<%=listingData.id%>/edit" class="btn btn-danger me-3">Edit</a>
+                            <form method="post" , action="/listings/<%=listingData.id%>?_method=DELETE">
+
+                                <button class="btn btn-outline-danger">Delete</button>
+                            </form>
+
+                        </div>
+
+                    </div>
+
+
+                </div>
+            </div>
+
+        </div>
+
+    </div>
+
+
+
+
+
+
+
+
+
+    </body>
