Implementation of authentication and LOgin signup functionality

--- a/views/includes/flash.ejs
+++ b/views/includes/flash.ejs
@@ -9,7 +9,7 @@
     <% }%>
 
     <% if(error && error.length){%>
-    <div class="alert col-md-4 offset-md-4 alert-success alert-dismissible fade show" role="alert">
+    <div class="alert col-md-4 offset-md-4 alert-danger alert-dismissible fade show" role="alert">
         <%=error%>
             <button type="button" class="btn-close " data-bs-dismiss="alert" aria-label="Close">
               
