--- a/views/listings/form.ejs
+++ b/views/listings/form.ejs
@@ -1,6 +1,6 @@
 <% layout("/layouts/boilerplate.ejs") %>
 
-    <body>
+    
 
 
         <div class="row">
@@ -61,7 +61,7 @@
                         <div class="valid-feedback">Looks good!</div>
                     </div>
 
-                    <button class="btn btn-primary addBtn" type="submit">ADD</button>
+                    <button class="btn btn-primary addBtn mb-3" type="submit">ADD</button>
                 </form>
 
             </div>
@@ -71,6 +71,4 @@
         </div>
 
 
-    </body>
-
-    </html>
+    
