--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -12,6 +12,8 @@
 
                 <img src="<%=listingData.image.url%>" class="card-img-top show-img" alt="...">
                 <div class="card-body">
+                    <p class="card-text"><b>Owner:</b>: <%=listingData.owner.username%>
+                    </p>
 
                     <p class="card-text"><b>Description</b>: <%=listingData.description%>
                     </p>
@@ -25,21 +27,25 @@
 
 
                     <div class="row">
+                        <% if(currUser && currUser._id.toString() === listingData.owner._id.toString()) {%>
 
-                        <div class="col-4 d-flex">
-                            <a href="/listings/<%=listingData.id%>/edit" class="btn btn-danger me-3">Edit</a>
-                            <form method="post" , action="/listings/<%=listingData._id%>?_method=DELETE">
+                            <div class="col-4 d-flex">
+                                <a href="/listings/<%=listingData.id%>/edit" class="btn btn-danger me-3">Edit</a>
+                                <form method="post" , action="/listings/<%=listingData._id%>?_method=DELETE">
 
-                                <button class="btn btn-outline-danger">Delete</button>
-                            </form>
+                                    <button class="btn btn-outline-danger">Delete</button>
+                                </form>
 
-                        </div>
+                            </div>
+
+                            <%} %>
 
                     </div>
 
                     <hr>
 
                     <div>
+                        <% if(currUser){ %>
                         <h3 class="">Leave A Review</h3>
 
                         <form class="mt-5 mb-3 needs-validation" action="/listings/<%= listingData._id %>/review"
@@ -62,6 +68,7 @@
                             <button class="btn btn-outline-danger">Submit</button>
 
                         </form>
+                        <% } %>
                     </div>
                     <hr>
                     <div>
@@ -72,18 +79,21 @@
                                 <div class="col-6">
                                     <div class="card mb-3">
                                         <div class="card-body">
-                                            <h5 class="card-title">David</h5>
+                                            <h5 class="card-title"><%= review.author.username %></h5>
                                             <h6 class="card-subtitle mb-2 text-body-secondary">
                                                 <%= review.rating %><i class="fa-solid fa-star-half-stroke"></i>
                                             </h6>
                                             <p class="card-text">
                                                 <%= review.Comment %>
                                             </p>
-                                            <form action="/listings/<%=listingData.id%>/review/<%=review.id%>?_method=DELETE" method="post">
+                                            <% if(currUser&& review.author._id.toString()===currUser._id.toString()){ %>
+                                            <form
+                                                action="/listings/<%=listingData.id%>/review/<%=review.id%>?_method=DELETE"
+                                                method="post">
                                                 <button class="btn btn-dark btn-sm"> Delete</button>
 
                                             </form>
-
+                                            <% } %>
                                         </div>
                                     </div>
                                 </div>
