Style review and Rating part with cool animation and also enhance modularity of code using diffrent file for functionality and router

--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -27,7 +27,7 @@
 
 
                     <div class="row">
-                        <% if(currUser && currUser._id.toString() === listingData.owner._id.toString()) {%>
+                        <% if(currUser && currUser._id.toString()===listingData.owner._id.toString()) {%>
 
                             <div class="col-4 d-flex">
                                 <a href="/listings/<%=listingData.id%>/edit" class="btn btn-danger me-3">Edit</a>
@@ -46,29 +46,43 @@
 
                     <div>
                         <% if(currUser){ %>
-                        <h3 class="">Leave A Review</h3>
+                            <h3 class="">Leave A Review</h3>
 
-                        <form class="mt-5 mb-3 needs-validation" action="/listings/<%= listingData._id %>/review"
-                            method="post" novalidate>
+                            <form class="mt-1 mb-3 needs-validation" action="/listings/<%= listingData._id %>/review"
+                                method="post" novalidate>
 
-                            <div class="mt-2 mb-3">
-                                <label for="rating" class="form-label">Rating</label>
-                                <input class="form-range" type="range" min="1" max="5" name="review[rating]"
-                                    id="rating">
-                            </div>
+                                <div class="mt-1 ">
+                                    <label for="">Rating</label>
+                                     <fieldset class="starability-slot">
 
-                            <div class="mt-2 mb-3">
-                                <label for="Comment" class="form-label">Comment</label>
-                                <textarea name="review[Comment]" class="form-control border-3" id="Comment" cols="50"
-                                    rows="5" required></textarea>
-                                <div class="invalid-feedback">Please add a Comment.</div>
-                                <div class="valid-feedback">Looks good!</div>
+                                    <input type="radio" id="no-rate" class="input-no-rate" name="review[rating]" value=1
+                                        checked aria-label="No rating." />
+                                    <input type="radio" id="first-rate1" name="review[rating]" value=1 />
+                                    <label for="first-rate1" title="Terrible">1 star</label>
+                                    <input type="radio" id="first-rate2" name="review[rating]" value=2 />
+                                    <label for="first-rate2" title="Not good">2 stars</label>
+                                    <input type="radio" id="first-rate3" name="review[rating]" value=3 />
+                                    <label for="first-rate3" title="Average">3 stars</label>
+                                    <input type="radio" id="first-rate4" name="review[rating]" value=4 />
+                                    <label for="first-rate4" title="Very good">4 stars</label>
+                                    <input type="radio" id="first-rate5" name="review[rating]" value=5 />
+                                    <label for="first-rate5" title="Amazing">5 stars</label>
+                                </fieldset>
 
-                            </div>
-                            <button class="btn btn-outline-danger">Submit</button>
+                                </div>
+                               
+                                <div class="mb-3">
+                                    <label for="Comment" class="form-label">Comment</label>
+                                    <textarea name="review[Comment]" class="form-control border-3" id="Comment"
+                                        cols="50" rows="5" required></textarea>
+                                    <div class="invalid-feedback">Please add a Comment.</div>
+                                    <div class="valid-feedback">Looks good!</div>
 
-                        </form>
-                        <% } %>
+                                </div>
+                                <button class="btn btn-outline-danger">Submit</button>
+
+                            </form>
+                            <% } %>
                     </div>
                     <hr>
                     <div>
@@ -79,21 +93,26 @@
                                 <div class="col-6">
                                     <div class="card mb-3">
                                         <div class="card-body">
-                                            <h5 class="card-title"><%= review.author.username %></h5>
+                                            <h5 class="card-title">
+                                                <%= review.author.username %>
+                                            </h5>
                                             <h6 class="card-subtitle mb-2 text-body-secondary">
-                                                <%= review.rating %><i class="fa-solid fa-star-half-stroke"></i>
+                                                <p class="starability-result" data-rating="<%=review.rating%>">
+
+                                                </p>
                                             </h6>
+
                                             <p class="card-text">
                                                 <%= review.Comment %>
                                             </p>
                                             <% if(currUser&& review.author._id.toString()===currUser._id.toString()){ %>
-                                            <form
-                                                action="/listings/<%=listingData.id%>/review/<%=review.id%>?_method=DELETE"
-                                                method="post">
-                                                <button class="btn btn-dark btn-sm"> Delete</button>
+                                                <form
+                                                    action="/listings/<%=listingData.id%>/review/<%=review.id%>?_method=DELETE"
+                                                    method="post">
+                                                    <button class="btn btn-dark btn-sm"> Delete</button>
 
-                                            </form>
-                                            <% } %>
+                                                </form>
+                                                <% } %>
                                         </div>
                                     </div>
                                 </div>
